# numerical

./: CHANGELOG.md  DEVELOPERS.md  README.md  pyproject.toml
src/numerical/: __init__.py  _exceptions.py  _operations.py  _operators.py  _protocols.py  _types.py  data.py  mixins.py  typeface.py  typeface.pyi
tests/: test_data.py  test_numerical.py
