[project]
name = "numerical"
version = "0.2.0"
description = "A numerical tower for non-scalar objects"
readme = "README.md"
authors = [
    { name = "Matthew Young", email = "myoung.space.science@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.3",
    "typing-extensions>=4.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "pytest>=8.3.4",
]
